k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app


spec:
  replicas: 2

  selector:
    matchLabels:
      app: node-app

  template:
    metadata:
      labels:
        app: node-app


    spec:
      containers:
      - name: node-app
        image: demo-node-app
        imagePullPolicy: Never

        ports:
        - containerPort: 3000
