k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service

spec:
  selector:
    app: node-app

  ports:
  - port: 3000
    targetPort: 3000

  type: NodePort
